--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.6.4",
     "react-chat-bubble": "^0.8.7",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
