--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-chat-bubble": "^0.8.7",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
-    "react-google-login": "^5.2.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
