--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-chat-bubble": "^0.8.7",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-input-emoji": "^4.0.9",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
